Changed default godot icon to dinosaur icon

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -31,11 +31,11 @@ codesign/timestamp_server_url=""
 codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PoolStringArray(  )
-application/icon=""
+application/icon="res://icon.png"
 application/file_version=""
 application/product_version=""
 application/company_name=""
-application/product_name=""
+application/product_name="Dinosaur Game"
 application/file_description=""
 application/copyright=""
 application/trademarks=""
