--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="./Dinosaur Game.exe"
+export_path="./Dinosaur Game - Windows.exe"
 script_export_mode=1
 script_encryption_key=""
 
@@ -49,7 +49,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="./Dinosaur Game.x86_64"
+export_path="./Dinosaur Game - Linux.x86_64"
 script_export_mode=1
 script_encryption_key=""
 
